Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24055

Raster paint engine's drawImage() paints a jagged image if width of target is not divisible by 4

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0
    • 5.0.0
    • GUI: Painting
    • None
    • Ubuntu 10.04, 64-bit
    • 9c31f6793e50b8ded908168e8083aac052ce0947

    Description

      When drawing a scaled, ARGB32_Premultiplied image onto a widget or image with width not divisible by 4, with source over composition, the image is painted with jagged scanlines. This does not occur if SmoothPixmapTransform is set or if opacity is less than 1. It also happens when rotated 180 degrees.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kkalland Kim Motoyoshi Kalland (Inactive)
              kkalland Kim Motoyoshi Kalland (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes